--- a/client/app/reviews/reviews.html
+++ b/client/app/reviews/reviews.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-lg-12">
 
-                Review Content: {{review?._id}} <br>
+                Review Id: {{review?._id}} <br>
                 Review Description: {{review?.reviewDesc}}<br>
                 Review Rating: {{review?.reviewRating}} <br>
                 Date of Review: {{review?.dateOfReview}} <br>
