--- a/client/app/recipes/recipes.html
+++ b/client/app/recipes/recipes.html
@@ -3,7 +3,7 @@
         <div class="col-lg-12">
             <h1 class="page-header">Details for {{recipe?.recipeName}}</h1>
             Id: {{recipe?._id}} <br>
-            Recipe Name: {{recipe?.recipeName}} <br>
+<!--            Recipe Name: {{recipe?.recipeName}} <br>-->
             Description: {{recipe?.description}} <br>
             Picture URL: {{recipe?.pictureURL}} <br>
             Prep Time: {{recipe?.prepTime}} <br>
