--- a/client/app/reviews/reviews.html
+++ b/client/app/reviews/reviews.html
@@ -8,6 +8,7 @@
                 Date of Review: {{review?.dateOfReview}} <br>
                 User Id: {{review?.reviewUser}} <br>
         </div>
+        <update-review [recipeId]="recipeId" [review]="review"></update-review>
         <button (click)="[recipeService.deleteReview(recipeId, review._id), goBack()]"
                 type="button" class="btn btn-primary"
                 tooltip="Are you sure you'd like to delete this review?"> Delete Review</button>
