--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,73 +2,57 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header"> Project 2</h1>
-            <hr size="5">
             <create-user></create-user>
-            <table class="table table-striped">
+            <table class="table-sm table-striped table-bordered">
                 <thead>
                 <tr>
                     <th>Id</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
+                    <th class="d-none d-md-block">First Name</th>
+                    <th class="d-none d-md-block">Last Name</th>
                     <th>User Name</th>
-                    <th>Email Address</th>
-                    <th>Update User</th>
+                    <th  >Email Address</th>
+
                 </tr>
                 </thead>
                 <tbody>
-                <tr *ngFor="let user of users">
-                    <td>
-                        <button [routerLink]="['/users', user._id]"
-                                type="button" class="btn btn-primary">More Details
-                        </button>
-                    </td>
-                    <td>{{user.name.firstName}}</td>
-                    <td>{{user.name.lastName}}</td>
-                    <td>{{user.userName}}</td>
-                    <td>{{user.emailAddress}}</td>
-                    <td><update-user [user]="user"></update-user></td>
-                </tr>
+                    <tr *ngFor="let user of users">
+                        <td>
+                            <button [routerLink]="['/users', user._id]"
+                                    type="button" class="btn btn-info btn-sm">More Details
+                            </button>
+                        </td>
+                        <td class="d-none d-md-block">{{user.name.firstName}}</td>
+                        <td class="d-none d-md-block">{{user.name.lastName}}</td>
+                        <td>{{user.userName}}</td>
+                        <td>{{user.emailAddress}}</td>
+                        <td><update-user [user]="user"></update-user></td>
+                    </tr>
                 </tbody>
             </table>
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div>-->
-<!--        <div>-->
+
             <create-recipe></create-recipe>
-            <table>
+
+            <table class="table-sm table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>Info </th>
+                        <th data-width="10">Info </th>
                         <th>Recipe Name</th>
-                        <th class="d-none d-small-table-cell">Description</th>
-                        <th>Picture URL</th>
-                        <th>Prep Time</th>
-                        <th>Cook Time</th>
-                        <th>Directions</th>
-                        <th>Ingredients</th>
-                        <th>User Reviews</th>
-    <!--                    <th>Update Recipe</th>-->
+                        <th class="d-none d-md-block">Description</th>
                     </tr>
                 </thead>
                 <tbody>
                 <tr *ngFor="let recipe of recipes">
                     <td>
                         <button [routerLink]="['/recipes', recipe._id]"
-                                type="button" class="btn btn-primary">More Details
+                                type="button" class="btn btn-info btn-sm">More Details
                         </button>
                     </td>
                     <td>{{recipe.recipeName}}</td>
-                    <td>{{recipe.description}}</td>
-                    <td>{{recipe.pictureURL}}</td>
-                    <td>{{recipe.prepTime}}</td>
-                    <td>{{recipe.cookTime}}</td>
-                    <td>{{recipe.directions.length}}</td>
-                    <td>{{recipe.ingredients.length}}</td>
-                    <td>{{recipe.userReviews.length}}</td>
+                    <td class="d-none d-md-block text-truncate"style="max-width: 250px;">{{recipe.description}}</td>
                     <td><update-recipe [recipe]="recipe"></update-recipe></td>
                     <td>
                         <button (click)="[recipeService.deleteRecipe(recipe), reloadPage()]"
-                        type="button" class="btn btn-primary"
+                        type="button" class="btn btn-danger btn-sm"
                         tooltip="Are you sure you'd like to delete this Recipe?"
                         placement="top"> Delete Recipe</button>
                     </td>
