--- a/client/app/reviews/reviews.html
+++ b/client/app/reviews/reviews.html
@@ -10,11 +10,11 @@
         </div>
         <update-review [recipeId]="recipeId" [review]="review"></update-review>
         <button (click)="[recipeService.deleteReview(recipeId, review._id), goBack()]"
-                type="button" class="btn btn-primary"
+                type="button" class="btn btn-danger btn-sm"
                 tooltip="Are you sure you'd like to delete this review?"> Delete Review</button>
     </div>
     <div class="return-footer">
-        <button (click)=goBack() type="button" class="btn btn-primary">
+        <button (click)=goBack() type="button" class="btn btn-primary btn-sm">
             Return
         </button>
     </div>
