--- a/client/app/reviews/reviews.html
+++ b/client/app/reviews/reviews.html
@@ -9,7 +9,7 @@
                 User Id: {{review?.reviewUser}} <br>
         </div>
         <update-review [recipeId]="recipeId" [review]="review"></update-review>
-        <button (click)="[recipeService.deleteReview(recipeId, review._id), goBack()]"
+        <button (click)="[this.recipeService.deleteReview(recipeId, review._id), goBack()]"
                 type="button" class="btn btn-danger btn-sm"
                 tooltip="Are you sure you'd like to delete this review?"> Delete Review</button>
     </div>
